add delete button

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <button class="btn btn-success me-3" onclick="soDuongNhoNhat()">Tìm số dương nhỏ nhất</button>
                 <button class="btn btn-success me-3" onclick="soChanCuoiCung()">Tìm số chẵn cuối cùng</button>
                 <button class="btn btn-success me-3" onclick="sntDauTien()">Tìm số nguyên tố đầu tiên</button>
+                <button class="btn btn-danger me-3 mt-3" onclick="xoaSo()">Xóa số</button>
             </div>
             <div class="alert alert-info" id="mangNguoiDungNhap"></div>
             <div class="alert alert-danger" id="demSoDuong"></div>
@@ -73,6 +74,7 @@
                 <button class="btn btn-success me-3" onclick="themSoA()">Thêm số</button>
                 <button class="btn btn-success me-3" onclick="demSoNguyen()">Đếm số nguyên</button>
                 <button class="btn btn-success me-3" onclick="soSanhAmDuong()">So Sánh</button>
+                <button class="btn btn-danger me-3" onclick="xoaSoA()">Xóa số</button>
             </div>
             <div class="alert alert-info" id="mangSoThuc"></div>
             <div class="alert alert-danger" id="demSoNguyen"></div>
